--- a/programs/my_first_pyth_app/Cargo.toml
+++ b/programs/my_first_pyth_app/Cargo.toml
@@ -16,5 +16,7 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.28.0"
-pyth-solana-receiver = {git = "https://github.com/pyth-network/pyth-crosschain", branch = "solana/bump-raw-vaas"}
+anchor-lang = "0.29.0"
+pyth-solana-receiver-state = {git = "https://github.com/pyth-network/pyth-crosschain", branch = "solana/rust-sdk"}
+ahash = "=0.8.6"
+solana-program = "1.18.2"
