--- a/programs/my_first_pyth_app/Cargo.toml
+++ b/programs/my_first_pyth_app/Cargo.toml
@@ -17,6 +17,6 @@ default = []
 
 [dependencies]
 anchor-lang = "0.29.0"
-pyth-solana-receiver-state = {git = "https://github.com/pyth-network/pyth-crosschain", branch = "solana/rust-sdk"}
+pyth-solana-receiver-sdk ="0.1.0"
 ahash = "=0.8.6"
 solana-program = "1.18.2"
